tests/analyzer/errors/missing_file.rv
use compiler
use data.vm

fn main() {}
